--- a/.taskfiles/cilium.yaml
+++ b/.taskfiles/cilium.yaml
@@ -10,9 +10,5 @@ tasks:
 
   setup-cilium-mesh:
     cmds:
-      # TODO: make this use vault/cert-manager issuer
-      # - kubectl --context k0s get secret -n kube-system cilium-ca -o yaml > /tmp/cilium-ca.yml
-      # - kubectl --context k8s delete secret -n kube-system cilium-ca || true
-      # - kubectl --context k8s create -f /tmp/cilium-ca.yml
-      # - rm -f /tmp/cilium-ca.yml
-      - cilium clustermesh connect --context k0s --destination-context k8s
+      - cilium hubble enable --create-ca --context k0s
+      #- cilium clustermesh status # connect --context k0s --destination-context k8s
