--- a/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -47,6 +47,12 @@ spec:
         service:
           type: LoadBalancer
           loadBalancerIP: "${CILIUM_LB_IP}"
+      config:
+        clusters:
+        - name: k8s
+          ips:
+          - 192.168.9.20
+          port: 2379
     containerRuntime:
       integration: containerd
       socketPath: /var/run/k3s/containerd/containerd.sock
