--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -44,6 +44,8 @@ spec:
               group: cert-manager.io
               kind: Issuer
               name: vault-issuer
+        kvstoremesh:
+          enabled: true
         service:
           type: LoadBalancer
           loadBalancerIP: "${CILIUM_LB_IP}"
