--- a/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k8s/kube-system/cilium/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
       name: "k8s"
       id: "${CILIUM_ID}"
     clustermesh:
-      useAPIServer: true
+      useAPIServer: false
       apiserver:
         tls:
           auto:
@@ -54,21 +54,6 @@ spec:
       socketPath: /var/run/k3s/containerd/containerd.sock
     endpointRoutes:
       enabled: true
-    # gatewayAPI:
-    #   enabled: true
-    #   service:
-    #     loadBalancerIP: "${CILIUM_LB_IP}"
-    # ingressController:
-    #   enabled: true
-    #   enforceHttps: true
-    #   loadbalancerMode: shared
-    #   defaultSecretName: "${DOMAIN/./-}-tls"
-    #   defaultSecretNamespace: ingress
-    #   service:
-    #     name: cilium-ingress
-    #     type: LoadBalancer
-    #     loadBalancerIP: "${CILIUM_LB_IP}"
-    #   gateway-api-secrets-namespace: "ingress"
     hubble:
       enabled: true
       tls:
