--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -96,18 +96,18 @@ tasks:
       - kubectl --context k8s -n kube-system apply -f {{.ROOT_DIR}}/kubernetes/templates/vault-auth.yaml
       - kubectl --context k8s -n kube-system get secret vault-auth-token -o jsonpath="{.data['ca\.crt']}" | base64 -d > ca.crt
       - vault write auth/kubernetes/k8s/config
-          token_reviewer_jwt="$(kubectl --context {{.ENVIRONMENT}} -n kube-system get secret vault-auth-token -o jsonpath=\"{.data.token}\" | base64 -d; echo)"
+          token_reviewer_jwt="$(kubectl --context k8s -n kube-system get secret vault-auth-token -o jsonpath=\"{.data.token}\" | base64 -d; echo)"
           kubernetes_host="https://{{.K8S_VIP_IP}}"
           kubernetes_ca_cert=@ca.crt
           disable_iss_validation=true
       - rm ca.crt
       # k0s
-      - vault auth disable kubernetes/k0s
-      - vault auth enable -path=kubernetes/k0s kubernetes
+      - vault auth disable kubernetes/k0s || true
+      - vault auth enable -path=kubernetes/k0s kubernetes || true
       - kubectl --context k0s -n kube-system apply -f {{.ROOT_DIR}}/kubernetes/templates/vault-auth.yaml
       - kubectl --context k0s -n kube-system get secret vault-auth-token -o jsonpath="{.data['ca\.crt']}" | base64 -d > ca.crt
       - vault write auth/kubernetes/k0s/config
-          token_reviewer_jwt="$(kubectl --context {{.ENVIRONMENT}} -n kube-system get secret vault-auth-token -o jsonpath=\"{.data.token}\" | base64 -d; echo)"
+          token_reviewer_jwt="$(kubectl --context k0s -n kube-system get secret vault-auth-token -o jsonpath=\"{.data.token}\" | base64 -d; echo)"
           kubernetes_host="https://{{.K0S_VIP_IP}}"
           kubernetes_ca_cert=@ca.crt
           disable_iss_validation=true
