--- a/.taskfiles/volsync/Tasks.yaml
+++ b/.taskfiles/volsync/Tasks.yaml
@@ -54,9 +54,11 @@ tasks:
       - sh: test -f {{.waitForJobScript}}
       - sh: test -f {{.unlockJobTemplate}}
 
-  # To run backup jobs in parallel for all replicationsources:
-  #  - kubectl --context {{.ENVIRONMENT}} get replicationsources --all-namespaces --no-headers | awk '{print $2, $1}' | xargs --max-procs=4 -l bash -c 'task vs:snapshot rsrc=$0 namespace=$1'
-  #
+  snapshot-all:
+    desc: Trigger Restic ReplicationSource Snapshot on all defined replicationsources
+    cmds: 
+      - kubectl --context {{.ENVIRONMENT}} get replicationsources --all-namespaces --no-headers | awk '{print $2, $1}'| xargs -n2 bash -c 'task vs:snapshot rsrc=$0 namespace=$1'
+
   snapshot:
     desc: Trigger a Restic ReplicationSource snapshot (ex. task vs:snapshot rsrc=plex [namespace=default])
     cmds:
