--- a/.taskfiles/volsync/Tasks.yaml
+++ b/.taskfiles/volsync/Tasks.yaml
@@ -42,7 +42,7 @@ tasks:
     silent: true
     cmds:
       - envsubst < <(cat {{.unlockJobTemplate}}) | kubectl --context {{.ENVIRONMENT}} apply -f -
-      - bash {{.waitForJobScript}} unlock-{{.rsrc}}-{{.ts}} {{.namespace}}
+      - bash {{.waitForJobScript}} unlock-{{.rsrc}}-{{.ts}} {{.namespace}} {{.ENVIRONMENT}}
       - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} wait job/unlock-{{.rsrc}}-{{.ts}} --for condition=complete --timeout=1m
       - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} logs job/unlock-{{.rsrc}}-{{.ts}} --container unlock
       - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} delete job unlock-{{.rsrc}}-{{.ts}}
@@ -134,7 +134,7 @@ tasks:
     internal: true
     cmds:
       - envsubst < <(cat {{.wipeJobTemplate}}) | kubectl --context {{.ENVIRONMENT}} apply -f -
-      - bash {{.waitForJobScript}} wipe-{{.rsrc}}-{{.claim}}-{{.ts}} {{.namespace}}
+      - bash {{.waitForJobScript}} wipe-{{.rsrc}}-{{.claim}}-{{.ts}} {{.namespace}} {{.ENVIRONMENT}}
       - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} wait job/wipe-{{.rsrc}}-{{.claim}}-{{.ts}} --for condition=complete --timeout=120m
       - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} logs job/wipe-{{.rsrc}}-{{.claim}}-{{.ts}} --container wipe
       - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} delete job wipe-{{.rsrc}}-{{.claim}}-{{.ts}}
@@ -145,7 +145,7 @@ tasks:
     internal: true
     cmds:
       - envsubst < <(cat {{.destinationTemplate}}) | kubectl --context {{.ENVIRONMENT}} apply -f -
-      - bash {{.waitForJobScript}} volsync-dst-{{.rsrc}}-{{.claim}}-{{.ts}} {{.namespace}}
+      - bash {{.waitForJobScript}} volsync-dst-{{.rsrc}}-{{.claim}}-{{.ts}} {{.namespace}} {{.ENVIRONMENT}}
       - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} wait job/volsync-dst-{{.rsrc}}-{{.claim}}-{{.ts}} --for condition=complete --timeout=120m
       - kubectl --context {{.ENVIRONMENT}} -n {{.namespace}} delete replicationdestination {{.rsrc}}-{{.claim}}-{{.ts}}
     env: *task-vars
@@ -154,6 +154,6 @@ tasks:
   restore-resume-app:
     internal: true
     cmds:
-      - flux -n {{.namespace}} resume helmrelease {{.rsrc}}
-      - flux -n flux-system resume kustomization {{.kustomization}}
+      - flux --context {{.ENVIRONMENT}} -n {{.namespace}} resume helmrelease {{.rsrc}}
+      - flux --context {{.ENVIRONMENT}} -n flux-system resume kustomization {{.kustomization}}
     env: *task-vars
