--- a/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -27,6 +27,7 @@ spec:
     keepHistory: false
   values:
     autoDirectNodeRoutes: true
+    routingMode: native
     bpf:
       masquerade: true
     bgp:
