--- a/kubernetes/apps/k0s/security/dex/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/security/dex/app/helmrelease.yaml
@@ -26,7 +26,9 @@ spec:
       KUBERNETES_POD_NAMESPACE: security
     ingress:
       enabled: false
-
+    service:
+      annotations:
+        io.cilium/global-service: "true"
     config:
       issuer: https://dex.${DOMAIN}
       storage:
@@ -45,7 +47,7 @@ spec:
         idTokens: "24h"
 
       logger:
-        level: debug
+        level: error
         format: json
 
       oauth2:
