test annotation post patch

--- a/kubernetes/apps/k8s/home-automation/home-assistant/database/kustomization.yaml
+++ b/kubernetes/apps/k8s/home-automation/home-assistant/database/kustomization.yaml
@@ -7,3 +7,12 @@ resources:
   - ./externalsecret.yaml
   - ./cluster.yaml
   - ./scheduledbackup.yaml
+patches:
+  - patch: |-
+      apiVersion: v1
+      kind: Service
+      metadata:
+        name: home-assistant-rw
+        namespace: home-automation
+        annotations:
+          io.cilium/global-service: 'true'
