--- a/kubernetes/apps/k8s/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/k8s/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -61,7 +61,7 @@ spec:
           - name: rook
             enabled: true
       dashboard:
-        enabled: true
+        enabled: false
         urlPrefix: /
         ssl: false
       storage:
