--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,3 @@
 #shellcheck disable=SC2148,SC2155
 export KUBECTL_EXTERNAL_DIFF="dyff between --omit-header --set-exit-code"
-export KUBECONFIG=$(find ~/workspace/.kubeconfigs -type f | tr '\n' ':')
+#export KUBECONFIG=$(find ~/workspace/.kubeconfigs -type f | tr '\n' ':')
