--- a/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
     cluster:
       name: "k0s"
       id: "${CILIUM_ID}"
-    clustermesh:
+    # clustermesh:
       # useAPIServer: true
       # apiserver:
       #   tls:
