--- a/kubernetes/apps/k0s/security/kustomization.yaml
+++ b/kubernetes/apps/k0s/security/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
-  - ./lldap/ks.yaml
+  #- ./lldap/ks.yaml
   - ./dex/ks.yaml
