--- a/kubernetes/apps/k0s/ingress/kustomization.yaml
+++ b/kubernetes/apps/k0s/ingress/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./nginx/ks.yaml
-  #- ./cloudflare-ddns/ks.yaml
+  - ./cloudflare-ddns/ks.yaml
