--- a/kubernetes/apps/k0s/security/lldap/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/security/lldap/app/helmrelease.yaml
@@ -78,6 +78,7 @@ spec:
         enabled: true    
         storageClassName: local-path
         size: 500Mi
+        accessMode: ReadWriteOnce
       certs:
         enabled: true
         type: custom
