--- a/kubernetes/apps/k0s/security/lldap/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/security/lldap/app/helmrelease.yaml
@@ -27,8 +27,7 @@ spec:
     keepHistory: false
   values:
     controller:
-      replicas: 1
-      strategy: RollingUpdate
+      type: statefulset
       annotations:
         reloader.stakater.com/auto: "true"
     image:
