--- a/kubernetes/apps/k0s/storage/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/storage/minio/app/helmrelease.yaml
@@ -48,8 +48,9 @@ spec:
       hosts:
         - "minio.${DOMAIN}"
       tls:
-        hosts:
-          - "minio.${DOMAIN}"
+        - secretName: "${DOMAIN/./-}-tls"
+          hosts:
+            - "minio.${DOMAIN}"
     consoleIngress:
       enabled: true
       ingressClassName: nginx
@@ -57,8 +58,9 @@ spec:
       hosts:
         - "minio-console.${DOMAIN}"
       tls:
-        hosts:
-          - "minio-console.${DOMAIN}"
+        - secretName: "${DOMAIN/./-}-tls"
+          hosts:
+            - "minio-console.${DOMAIN}"
     resources:
       requests:
         memory: 2Gi
