--- a/kubernetes/apps/k0s/storage/minio/app/pv.yaml
+++ b/kubernetes/apps/k0s/storage/minio/app/pv.yaml
@@ -6,6 +6,9 @@ metadata:
 spec:
   capacity:
     storage: 20Gi
+  hostPath:
+    path: /var/lib/rancher/k3s/storage/minio
+    type: DirectoryOrCreate
   accessModes:
     - ReadWriteOnce
   claimRef:
