--- a/kubernetes/apps/k0s/storage/minio/app/helmrelease.yaml
+++ b/kubernetes/apps/k0s/storage/minio/app/helmrelease.yaml
@@ -19,6 +19,12 @@ spec:
     createNamespace: false
     remediation:
       retries: 3
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
+  uninstall:
+    keepHistory: false
   values:
     mode: standalone
     existingSecret: "minio-secret"
